--- a/file/CMakeLists.txt
+++ b/file/CMakeLists.txt
@@ -20,7 +20,7 @@ target_link_libraries(list_file_py python2.7 file)
 add_include(list_file_py "/usr/include/python2.7/")
 
 add_library(fiber_file fiber_file.cc)
-cxx_link(fiber_file file fibers)
+cxx_link(fiber_file file fibers_ext)
 
 
 cxx_test(file_test file lz4_file LABELS CI)
