--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -11,16 +11,10 @@ add_library(pb2json pb2json.cc)
 cxx_link(pb2json strings status TRDP::protobuf absl_variant)
 add_dependencies(pb2json rapidjson_project)
 
-add_library(fibers_ext fibers_ext.cc)
-cxx_link(fibers_ext base Boost::fiber)
-
 add_library(threads sp_task_pool.cc)
 cxx_link(threads base)
 
 cxx_test(sp_task_pool_test base threads util LABELS CI)
-
-add_library(fibers fiberqueue_threadpool.cc)
-cxx_link(fibers base status strings Boost::fiber)
 
 add_library(proc_stats proc_stats.cc spawn.cc)
 cxx_link(proc_stats strings)
@@ -29,6 +23,7 @@ cxx_test(sinksource_test strings util LABELS CI)
 cxx_test(pb2json_test pb2json addressbook_proto LABELS CI)
 
 add_subdirectory(asio)
+add_subdirectory(fibers)
 add_subdirectory(http)
 add_subdirectory(html)
 add_subdirectory(math)
