--- a/mr/CMakeLists.txt
+++ b/mr/CMakeLists.txt
@@ -1,4 +1,4 @@
 cxx_proto_lib(mr3)
 
-add_library(mr3_lib mr.cc)
+add_library(mr3_lib mr.cc mr_executor.cc)
 cxx_link(mr3_lib absl_variant base mr3_proto)
