--- a/mr/CMakeLists.txt
+++ b/mr/CMakeLists.txt
@@ -2,3 +2,5 @@ cxx_proto_lib(mr3)
 
 add_library(mr3_lib mr.cc mr_executor.cc)
 cxx_link(mr3_lib absl_variant base mr3_proto fiber_file)
+
+cxx_test(mr_test mr3_lib LABELS CI)
