--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -20,6 +20,7 @@ cxx_test(event_count_test base LABELS CI)
 cxx_test(coder_test base LABELS CI)
 cxx_test(wheel_timer_test base LABELS CI)
 cxx_test(lambda_test base LABELS CI)
+cxx_test(mpmc_bounded_queue_test base LABELS CI)
 
 # Define default gtest_main for tests.
 add_library(gtest_main gtest_main.cc)
