--- a/mr/CMakeLists.txt
+++ b/mr/CMakeLists.txt
@@ -2,5 +2,6 @@ cxx_proto_lib(mr3)
 
 add_library(mr3_lib mr.cc pipeline.cc pipeline_executor.cc local_runner.cc)
 cxx_link(mr3_lib absl_variant base mr3_proto fiber_file asio_fiber_lib)
+add_dependencies(mr3_lib rapidjson_project)
 
 cxx_test(mr_test mr3_lib LABELS CI)
