--- a/mr/CMakeLists.txt
+++ b/mr/CMakeLists.txt
@@ -1,7 +1,8 @@
 cxx_proto_lib(mr3)
 
 add_library(mr3_lib mr.cc pipeline.cc pipeline_executor.cc local_runner.cc mr_main.cc)
-cxx_link(mr3_lib absl_variant absl_str_format base mr3_impl_lib fiber_file asio_fiber_lib)
+cxx_link(mr3_lib absl_variant absl_str_format absl_flat_hash_map base mr3_impl_lib
+         fiber_file asio_fiber_lib)
 add_dependencies(mr3_lib rapidjson_project)
 
 add_subdirectory(impl)
