Add Joiner concept

--- a/mr/CMakeLists.txt
+++ b/mr/CMakeLists.txt
@@ -7,4 +7,7 @@ add_dependencies(mr3_lib rapidjson_project)
 
 add_subdirectory(impl)
 
-cxx_test(mr_test mr3_lib LABELS CI)
+add_library(mr_test_lib test_utils.cc)
+cxx_link(mr_test_lib mr3_lib gtest_main)
+
+cxx_test(mr_test mr_test_lib LABELS CI)
