--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os: linux
 env:
   global:
     - LSAN_OPTIONS=suppressions=$HOME/supress.txt
+    - ASAN_OPTIONS=symbolize=1,abort_on_error=1,detect_leaks=1
 
 cache:
   directories:
