Add more tests to MR

--- a/mr/CMakeLists.txt
+++ b/mr/CMakeLists.txt
@@ -10,3 +10,4 @@ add_library(mr_test_lib test_utils.cc)
 cxx_link(mr_test_lib mr3_lib absl_flat_hash_map gtest_main)
 
 cxx_test(mr_test mr_test_lib addressbook_proto LABELS CI)
+cxx_test(local_runner_test mr_test_lib addressbook_proto LABELS CI)
