DOC: initial support of doxygen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,4 +53,5 @@ if (NOT ONLY_THIRD_PARTY)
   add_subdirectory(file)
   add_subdirectory(mr)
   add_subdirectory(examples)
+  add_subdirectory(doc)
 endif()
