--- a/.travis.yml
+++ b/.travis.yml
@@ -70,10 +70,18 @@ script:
   - ninja -j4 base array_test dynasm_project libosmium_project
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
   - ninja -j4 $tests_list asio_fibers -k 10
-  - ./http_test --logtostderr --vmodule=http_client=1
   - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
+  - ninja doc
 
 after_failure:
   - pwd
   - find third_party/src/ -regex ".*\(err\|out\).log" | xargs -n 3 -t cat
   - find ../testresults | xargs -n 3 -t cat
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  local_dir: docs/html
+  github_token: $GH_REPO_TOKEN
+  on:
+    branch: master
