--- a/.travis.yml
+++ b/.travis.yml
@@ -61,27 +61,30 @@ install:
   - sudo ./install-dependencies.sh
   - ls -l /opt/
 
-script:
-  - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
-  - cmake --version
-  - env
-  - mkdir testresults && mkdir -p build-dbg && cd build-dbg
-  - cmake -L -DCMAKE_BUILD_TYPE=Debug -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache ..
-  - ninja -j4 base array_test dynasm_project libosmium_project
-  - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
-  - ninja -j4 $tests_list asio_fibers -k 10
-  - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
-  - ninja doc
+jobs:
+  include:
+    stage: Running tests
+    script:
+      - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
+      - cmake --version
+      - env
+      - mkdir testresults && mkdir -p build-dbg && cd build-dbg
+      - cmake -L -DCMAKE_BUILD_TYPE=Debug -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache ..
+      - ninja -j4 base array_test dynasm_project libosmium_project
+      - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
+      - ninja -j4 $tests_list asio_fibers -k 10
+      - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
 
 after_failure:
   - pwd
   - find third_party/src/ -regex ".*\(err\|out\).log" | xargs -n 3 -t cat
   - find ../testresults | xargs -n 3 -t cat
 
-deploy:
-  provider: pages
-  skip_cleanup: true
-  local_dir: docs/html
-  github_token: $GH_REPO_TOKEN
-  on:
-    branch: master
+# TODO: to break travis build into stages.
+# deploy:
+#   provider: pages
+#   skip_cleanup: true
+#   local_dir: build-dbg/docs/html
+#   github_token: $GH_REPO_TOKEN
+#   on:
+#     branch: master
