--- a/.travis.yml
+++ b/.travis.yml
@@ -26,24 +26,6 @@ cache:
 before_cache:
   - ls $TRAVIS_BUILD_DIR/build-dbg/third_party
 
-matrix:
-  include:
-    - compiler: gcc
-      env:
-        - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
-    - compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-      env:
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-    - compiler: clang
-      env:
-        - MATRIX_EVAL="CC=clang && CXX=clang++"
-
 before_install:
   # Fix for Ubuntu Xenial apt-daily.service triggering
   # https://unix.stackexchange.com/questions/315502/how-to-disable-apt-daily-service-on-ubuntu-cloud-vm-image
@@ -61,19 +43,29 @@ install:
   - sudo ./install-dependencies.sh
   - ls -l /opt/
 
+script:
+  - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
+  - cmake --version
+  - env
+  - mkdir testresults && mkdir -p build-dbg && cd build-dbg
+  - cmake -L -DCMAKE_BUILD_TYPE=Debug -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache ..
+  - ninja -j4 base array_test dynasm_project libosmium_project
+  - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
+  - ninja -j4 $tests_list asio_fibers -k 10
+  - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
+
 jobs:
+  fast_finish: true
   include:
-    stage: Running tests
-    script:
-      - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
-      - cmake --version
-      - env
-      - mkdir testresults && mkdir -p build-dbg && cd build-dbg
-      - cmake -L -DCMAKE_BUILD_TYPE=Debug -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache ..
-      - ninja -j4 base array_test dynasm_project libosmium_project
-      - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
-      - ninja -j4 $tests_list asio_fibers -k 10
-      - echo $tests_list |  xargs -n1 -t ../scripts/run_test.sh -l ../testresults -t 25 --name
+  - compiler: clang
+    stage: test
+    name: "Unit Tests"
+    env:
+      - MATRIX_EVAL="CC=clang && CXX=clang++"
+  - compiler: gcc
+    stage: test
+    env:
+      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 
 after_failure:
   - pwd
