--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,15 @@ jobs:
     - compiler: gcc
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+    - compiler: gcc
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+      env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
 after_failure:
   - pwd
