--- a/.travis.yml
+++ b/.travis.yml
@@ -57,16 +57,12 @@ script:
 jobs:
   fast_finish: true
   include:
-  - stage: test
-    name: "Unit Tests"
-    env:
+  - env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
   - stage: test
-    name: "Unit Tests"
     env:
       - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
   - stage: test
-    name: "Unit Tests"
     addons:
         apt:
           sources:
