--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ cache:
   directories:
   - /opt/boost_1_70_0
   - build-dbg/third_party  # Relative to $TRAVIS_BUILD_DIR
+  ccache: true
 
 before_cache:
   - ls $TRAVIS_BUILD_DIR/build-dbg/third_party
@@ -43,12 +44,14 @@ install:
   - sudo ./install-dependencies.sh
   - ls -l /opt/
 
-script:
+before_script:
   - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
   - cmake --version
   - env
+
+script:
   - mkdir testresults && mkdir -p build-dbg && cd build-dbg
-  - cmake -L -DCMAKE_BUILD_TYPE=Debug -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=/usr/bin/ccache ..
+  - cmake -L -DCMAKE_BUILD_TYPE=Debug -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=ccache ..
   - ninja -j4 base array_test dynasm_project libosmium_project
   - tests_list=$(ctest -L CI -N | grep "Test.*#" | cut -f2 -d:| sort)
   - ninja -j4 $tests_list asio_fibers -k 10
