--- a/.travis.yml
+++ b/.travis.yml
@@ -62,29 +62,32 @@ jobs:
   include:
   - env:
       - MATRIX_EVAL="CC=clang && CXX=clang++"
-  - stage: test
-    env:
+  - env:
       - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
-  - stage: test
+  - env:
+      - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
     addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
             - g++-7
-    env:
-      - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+
+  - stage: deploy
+    script:
+      - mkdir -p build-dbg && cd build-dbg
+      - cmake -L -DCMAKE_BUILD_TYPE=Debug -GNinja -DCMAKE_CXX_COMPILER_LAUNCHER=ccache ..
+      - ninja doc
+    deploy:
+      provider: pages
+      skip_cleanup: true
+      local_dir: build-dbg/docs/html
+      github_token: $GH_REPO_TOKEN
+      on:
+        branch: master
 
 after_failure:
   - pwd
   - find third_party/src/ -regex ".*\(err\|out\).log" | xargs -n 3 -t cat
   - find ../testresults | xargs -n 3 -t cat
 
-# TODO: to break travis build into stages.
-# deploy:
-#   provider: pages
-#   skip_cleanup: true
-#   local_dir: build-dbg/docs/html
-#   github_token: $GH_REPO_TOKEN
-#   on:
-#     branch: master
