--- a/file/CMakeLists.txt
+++ b/file/CMakeLists.txt
@@ -3,7 +3,7 @@ add_library(file file.cc file_util.cc filesource.cc gzip_file.cc list_file.cc li
 cxx_link(file base strings util TRDP::lz4 TRDP::crc32c)
 
 add_library(test_util test_util.cc)
-target_link_libraries(test_util base file gtest_main)
+target_link_libraries(test_util base file gaia_gtest_main)
 
 cxx_proto_lib(proto_writer_test DEPENDS addressbook_proto)
 
