MR: Support lst writes

--- a/mr/impl/CMakeLists.txt
+++ b/mr/impl/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(mr3_impl_lib dest_file_set.cc)
+add_library(mr3_impl_lib local_context.cc dest_file_set.cc)
 cxx_link(mr3_impl_lib strings fiber_file mr3_proto)
