--- a/.travis.yml
+++ b/.travis.yml
@@ -79,18 +79,23 @@ after_failure:
 jobs:
   fast_finish: true
   include:
-  - env:
-      - MATRIX_EVAL="CC=clang && CXX=clang++"
-  - env:
-      - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
-  - env:
-      - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+  - stage: Build
+    - env:
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
+    - env:
+        - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+    - env:
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
     addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
+      apt:
+        sources:
+          - ubuntu-toolchain-r-test
+        packages:
+          - g++-7
+    after_failure:
+      - pwd
+      - find third_party/src/ -regex ".*\(err\|out\).log" | xargs -n 3 -t cat
+      - find ../testresults | xargs -n 3 -t cat
 
   - stage: deploy
     script:
