--- a/.travis.yml
+++ b/.travis.yml
@@ -80,8 +80,14 @@ jobs:
   include:
   - stage: Build
     env: MATRIX_EVAL="CC=clang && CXX=clang++"
-   -env: MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
-   -env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+  - env: MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+  - env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+    addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
   - stage: deploy
     script:
       - mkdir -p build-dbg && cd build-dbg
