MR: Add mrgrep example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -22,5 +22,8 @@ cxx_link(movies_join mr3_lib absl_hash absl_str_format http_v2 TRDP::re2)
 add_executable(mr_read_test mr_read_test.cc)
 cxx_link(mr_read_test mr3_lib http_v2)
 
+add_executable(mrgrep mrgrep.cc)
+cxx_link(mrgrep mr3_lib http_v2 TRDP::re2)
+
 add_executable(osmium_road_length osmium_road_length.cc)
 cxx_link(osmium_road_length base TRDP::libosmium)
