--- a/doc/header.html.in
+++ b/doc/header.html.in
@@ -4,10 +4,10 @@
         <title>GAIA</title>
         <meta http-equiv="Content-Type" content="text/html;"/>
         <meta charset="utf-8"/>
-        <!--<link rel='stylesheet' type='text/css' href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic"/>-->
+        <link rel='stylesheet' type='text/css' href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic"/>
         <link rel="stylesheet" type="text/css" href="doxygen.css" title="default" media="screen,print" />
         <script type="text/javascript" src="jquery.js"></script>
-        <script type="text/javascript" src="dynsections.js"></script>
+        <!-- <script type="text/javascript" src="dynsections.js"></script> -->
     </head>
     <body>
         <div id="banner-container">
