--- a/doc/header.html.in
+++ b/doc/header.html.in
@@ -7,7 +7,7 @@
         <link rel='stylesheet' type='text/css' href="https://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic"/>
         <link rel="stylesheet" type="text/css" href="doxygen.css" title="default" media="screen,print" />
         <script type="text/javascript" src="jquery.js"></script>
-        <!-- <script type="text/javascript" src="dynsections.js"></script> -->
+        <script type="text/javascript" src="https://rawcdn.githack.com/doxygen/doxygen/5213707f485360bd9145beebe2fab250ca133a02/templates/html/dynsections.js"></script>
     </head>
     <body>
         <div id="banner-container">
