--- a/util/gce/CMakeLists.txt
+++ b/util/gce/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_library(gce_lib gce.cc gcs.cc)
-cxx_link(gce_lib asio_fiber_lib file status ssl crypto TRDP::rapidjson)
+cxx_link(gce_lib asio_fiber_lib file status ssl crypto http_beast_prebuilt TRDP::rapidjson)
 
