--- a/util/fibers/CMakeLists.txt
+++ b/util/fibers/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_library(fibers_ext fibers_ext.cc fiberqueue_threadpool.cc)
 cxx_link(fibers_ext base Boost::fiber absl_strings)
 
-cxx_test(fibers_ext_test fibers_ext LABELS CI)
+cxx_test(fibers_ext_test fibers_ext asio_fiber_lib LABELS CI)
