--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,6 @@ before_install:
 install:
   - sudo $TRAVIS_BUILD_DIR/install-dependencies.sh
   - ls -l /opt/
-  - ls -l /usr/include/F*
 
 before_script:
   - printf "leak:MallocExtension\nleak:event_base_once" > $HOME/supress.txt
@@ -81,6 +80,12 @@ jobs:
   include:
   - stage: Build
     env: MATRIX_EVAL="CC=clang-7.0 && CXX=clang++-7.0"
+  -
+    env: MATRIX_EVAL="CC=clang-8.0 && CXX=clang++-8.0"
+    addons:
+        apt:
+          packages:
+            - clang-8
   - # Stage Build
     env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
   - # Stage Build
