--- a/util/http/CMakeLists.txt
+++ b/util/http/CMakeLists.txt
@@ -9,7 +9,7 @@ cxx_link(http_main http_v2 html_lib)
 add_library(http_client_lib http_client.cc)
 cxx_link(http_client_lib strings asio_fiber_lib)
 
-add_library(https_client_lib https_client.cc https_client_pool.cc)
+add_library(https_client_lib https_client.cc https_client_pool.cc ssl_stream.cc)
 cxx_link(https_client_lib strings asio_fiber_lib absl_variant http_beast_prebuilt ssl crypto)
 
 add_library(http_test_lib http_testing.cc)
