Use zero-copy functions for more efficient SSL transfer

--- a/util/http/CMakeLists.txt
+++ b/util/http/CMakeLists.txt
@@ -11,6 +11,8 @@ cxx_link(http_client_lib strings asio_fiber_lib)
 
 add_library(https_client_lib https_client.cc https_client_pool.cc ssl_stream.cc)
 cxx_link(https_client_lib strings asio_fiber_lib absl_variant http_beast_prebuilt ssl crypto)
+cxx_test(ssl_stream_test https_client_lib LABELS CI)
+
 
 add_library(http_test_lib http_testing.cc)
 cxx_link(http_test_lib http_v2 gaia_gtest_main TRDP::rapidjson)
