--- a/strings/CMakeLists.txt
+++ b/strings/CMakeLists.txt
@@ -13,3 +13,4 @@ cxx_test(range_test strings LABELS CI)
 cxx_test(unique_strings_test strings LABELS CI)
 cxx_test(strcat_test strings LABELS CI)
 cxx_test(strpmr_test strings LABELS CI)
+cxx_test(numbers_test strings LABELS CI)
