--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,9 @@ cxx_link(mr3 fiber_file asio_fiber_lib mr3_lib absl_hash absl_str_format http_v2
 add_executable(gcs_demo gcs_demo.cc)
 cxx_link(gcs_demo gce_lib)
 
+add_executable(s3_demo s3_demo.cc)
+cxx_link(s3_demo file https_client_lib)
+
 add_executable(gsod_group gsod_group.cc)
 cxx_link(gsod_group mr3_lib absl_hash absl_str_format http_v2)
 
