--- a/util/CMakeLists.txt
+++ b/util/CMakeLists.txt
@@ -33,4 +33,5 @@ add_subdirectory(pprint)
 add_subdirectory(rpc)
 add_subdirectory(sentry)
 add_subdirectory(stats)
+add_subdirectory(aws)
 add_subdirectory(gce)
