--- a/util/aws/CMakeLists.txt
+++ b/util/aws/CMakeLists.txt
@@ -1,3 +1,7 @@
+find_package(LibXml2)
+
+include_directories(${LIBXML2_INCLUDE_DIR})
+
 add_library(aws_lib aws.cc s3.cc)
-cxx_link(aws_lib asio_fiber_lib file status https_client_lib)
+cxx_link(aws_lib asio_fiber_lib file status https_client_lib ${LIBXML2_LIBRARIES})
 
