--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -32,4 +32,5 @@ add_executable(osmium_road_length osmium_road_length.cc)
 cxx_link(osmium_road_length base TRDP::libosmium)
 
 add_subdirectory(wordcount)
+add_subdirectory(pingserver)
 add_subdirectory(redis)
