Use proactor in ping_iouring_server

--- a/examples/pingserver/CMakeLists.txt
+++ b/examples/pingserver/CMakeLists.txt
@@ -8,4 +8,4 @@ add_executable(ping_epoll_server ping_epoll_server.cc resp_parser.cc ping_comman
 cxx_link(ping_epoll_server base asio_fiber_lib http_v2)
 
 add_executable(ping_iouring_server ping_iouring_server.cc resp_parser.cc ping_command.cc)
-cxx_link(ping_iouring_server base asio_fiber_lib http_v2 -luring)
+cxx_link(ping_iouring_server base asio_fiber_lib http_v2 uring_fiber_lib)
