Introduce FiberSocket for uring

--- a/util/uring/CMakeLists.txt
+++ b/util/uring/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(uring_fiber_lib proactor.cc uring_fiber_algo.cc)
+add_library(uring_fiber_lib fiber_socket.cc proactor.cc uring_fiber_algo.cc)
 cxx_link(uring_fiber_lib base Boost::fiber -luring)
 
 cxx_test(proactor_test uring_fiber_lib LABELS CI)
