--- a/util/uring/CMakeLists.txt
+++ b/util/uring/CMakeLists.txt
@@ -3,3 +3,4 @@ add_library(uring_fiber_lib accept_server.cc fiber_socket.cc prebuilt_asio.cc
 cxx_link(uring_fiber_lib base Boost::fiber -luring)
 
 cxx_test(proactor_test uring_fiber_lib LABELS CI)
+cxx_test(accept_server_test uring_fiber_lib LABELS CI)
