--- a/util/uring/CMakeLists.txt
+++ b/util/uring/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(uring_fiber_lib accept_server.cc fiber_socket.cc http_handler.cc prebuilt_asio.cc
-            proactor.cc uring_fiber_algo.cc)
+            proactor.cc proactor_pool.cc uring_fiber_algo.cc)
 cxx_link(uring_fiber_lib base http_common Boost::fiber -luring)
 
 cxx_test(proactor_test uring_fiber_lib LABELS CI)
