Add proactor-friendly varz framework. It uses scatter gather pattern in order to avoid memory contentions for high frequency varz updates

--- a/util/uring/CMakeLists.txt
+++ b/util/uring/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(uring_fiber_lib accept_server.cc fiber_socket.cc http_handler.cc
             #we need prebuilt_asio for errrors support, consider using our own #
-            prebuilt_asio.cc proactor.cc proactor_pool.cc uring_fiber_algo.cc)
+            prebuilt_asio.cc proactor.cc proactor_pool.cc sliding_counter.cc
+            uring_fiber_algo.cc varz.cc)
 cxx_link(uring_fiber_lib base http_common Boost::fiber -luring)
 
 cxx_test(proactor_test uring_fiber_lib)
